<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLight"
    android:paddingBottom="20dp"
    tools:context=".fragments.SeatMatrixFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="20dp">

        <TextView
            android:id="@+id/screen_tv"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="20dp"
            android:background="#fff"
            android:fontFamily="sans-serif-condensed-medium"
            android:gravity="center"
            android:text="@string/screen"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.gridlayout.widget.GridLayout
            android:id="@+id/gridview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_1"
                app:layout_column="0"
                app:layout_row="0" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_2"
                app:layout_column="4"
                app:layout_row="0" />

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_3"
                app:layout_column="0"
                app:layout_row="1" />

            <Button
                android:id="@+id/button7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_7"
                app:layout_column="0"
                app:layout_row="2" />

            <Button
                android:id="@+id/button11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_11"
                app:layout_column="0"
                app:layout_row="3" />

            <Button
                android:id="@+id/button15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_15"
                app:layout_column="0"
                app:layout_row="4" />

            <Button
                android:id="@+id/button8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_8"
                app:layout_column="1"
                app:layout_row="2" />

            <Button
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_4"
                app:layout_column="1"
                app:layout_row="1" />

            <Button
                android:id="@+id/button12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_12"
                app:layout_column="1"
                app:layout_row="3" />

            <Button
                android:id="@+id/button16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_16"
                app:layout_column="1"
                app:layout_row="4" />

            <Button
                android:id="@+id/button5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_5"
                app:layout_column="3"
                app:layout_row="1" />

            <Button
                android:id="@+id/button9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_9"
                app:layout_column="3"
                app:layout_row="2" />

            <Button
                android:id="@+id/button13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_13"
                app:layout_column="3"
                app:layout_row="3" />

            <Button
                android:id="@+id/button17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_17"
                app:layout_column="3"
                app:layout_row="4" />

            <Button
                android:id="@+id/button6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_6"
                app:layout_column="4"
                app:layout_row="1" />

            <Button
                android:id="@+id/button10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_10"
                app:layout_column="4"
                app:layout_row="2" />

            <Button
                android:id="@+id/button14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_14"
                app:layout_column="4"
                app:layout_row="3" />

            <Button
                android:id="@+id/button18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_18"
                app:layout_column="4"
                app:layout_row="4" />


        </androidx.gridlayout.widget.GridLayout>

        <TextView
            android:id="@+id/red_color_tv"
            android:layout_width="20dp"
            android:layout_height="17dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:background="@color/colorRed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gridview" />

        <TextView
            android:id="@+id/booked_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/booked"
            android:textColor="#fff"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@id/red_color_tv"
            app:layout_constraintStart_toEndOf="@id/red_color_tv" />

        <TextView
            android:id="@+id/green_color_tv"
            android:layout_width="20dp"
            android:layout_height="17dp"
            android:layout_marginStart="20dp"
            android:background="@color/colorGreen"
            app:layout_constraintBottom_toBottomOf="@+id/red_color_tv"
            app:layout_constraintStart_toEndOf="@id/booked_tv" />

        <TextView
            android:id="@+id/friend_booked_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/friends"
            android:textColor="#fff"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@id/red_color_tv"
            app:layout_constraintStart_toEndOf="@id/green_color_tv" />

        <TextView
            android:id="@+id/grey_color_tv"
            android:layout_width="20dp"
            android:layout_height="17dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintBottom_toBottomOf="@+id/red_color_tv"
            app:layout_constraintStart_toEndOf="@id/friend_booked_tv" />

        <TextView
            android:id="@+id/available_booked_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/available"
            android:textColor="#fff"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@id/red_color_tv"
            app:layout_constraintStart_toEndOf="@id/grey_color_tv" />

        <TextView
            android:id="@+id/cinema_name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/cinema"
            android:textColor="#fff"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/friend_booked_tv" />

        <Button
            android:id="@+id/confirm_book_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@color/colorAccent"
            android:padding="10dp"
            android:text="@string/confirm_booking"
            android:textColor="#fff"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/select_date" />

        <Button
            android:id="@+id/select_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:background="@color/colorAccent"
            android:padding="5dp"
            android:text="@string/select_date"
            android:textColor="#fff"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cinema_name_tv" />

        <TextView
            android:id="@+id/time_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:background="@color/colorAccent"
            android:fontFamily="sans-serif-condensed"
            android:padding="5dp"
            android:prompt="@string/app_name"
            android:text="@string/select_time"
            android:textColor="#fff"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cinema_name_tv" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:background="@color/colorAccent"
            android:padding="5dp"

            android:prompt="@string/app_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/time_label" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>