<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/frame_layout_dialog"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:paddingBottom="20dp">


    <TextView
        android:id="@+id/proceed_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="25dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/booking_dialog1"
        android:textSize="17sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/dialog_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="15dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/booking_dialog2"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/visibility_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="25dp"
        android:layout_marginTop="130dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/set_visibility"
        android:textSize="17sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/global_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginStart="25dp"
        android:layout_marginTop="165dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="15dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/booking_dialog3"
        android:textSize="15sp" />

    <CheckBox
        android:id="@+id/checkbox_global"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="125dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="15dp"
        android:checked="true"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/global"
        android:textSize="18sp" />

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="200dp"
        android:background="@color/colorAccent"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/cancel"
        android:textColor="#fff" />

    <Button
        android:id="@+id/ok_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="20dp"
        android:background="@color/colorAccent"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/ok"
        android:textColor="#fff" />

</FrameLayout>