<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frame_layout_dialog"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:paddingBottom="20dp">


    <TextView
        android:id="@+id/dialog_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="15dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/required_information"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/visibility_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="25dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/account_dialog1"
        android:textSize="17sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/dialog_email_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="130dp"
        android:fontFamily="sans-serif-condensed"
        tools:text="divyansh.dahiya2105@gmail.com"
        android:textSize="17sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/phone_tv_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="170dp"
        android:fontFamily="sans-serif-condensed"
        android:hint="@string/enter_phone_number"
        android:inputType="phone"
        android:textSize="19sp" />


    <TextView
        android:id="@+id/global_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="230dp"
        android:layout_marginBottom="15dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/account_dialog2"
        android:textSize="15sp" />

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="230dp"
        android:background="@color/colorAccent"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/cancel"
        android:textColor="#fff"
        android:visibility="gone" />

    <Button
        android:id="@+id/ok_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="270dp"
        android:background="@color/colorAccent"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/ok"
        android:textColor="#fff" />

</FrameLayout>