<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLight"
    android:padding="@dimen/widget_margin">



    <TextView
        android:id="@+id/title_widget_tv"
        style="?android:attr/textAppearanceLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/app_name"
        android:textColor="#fff"
        android:textSize="32sp"
        android:textStyle="bold"
         />

    <TextView
        android:id="@+id/email_widget_tv"
        style="?android:attr/textAppearanceLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="60dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/divyansh_dahiya2105_gmail_com"
        android:textColor="#fff"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/phone_widget_tv2"
        style="?android:attr/textAppearanceLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="85dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/_9871806344"
        android:textColor="#fff"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/content_widget_tv"
        style="?android:attr/textAppearanceLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="115dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/content"
        android:textColor="#fff"
        android:textSize="16sp" />


</FrameLayout>