<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="5dp"
    android:paddingStart="10dp"
    android:paddingTop="10dp"
    android:paddingEnd="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:orientation="vertical"
        android:paddingStart="5dp"
        android:paddingTop="10dp"
        android:paddingEnd="5dp"
        android:paddingBottom="25dp">

        <TextView
            android:id="@+id/cinema_address_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center_horizontal"
            android:text="@string/address"
            android:textColor="#fff"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/booking_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"

            android:fontFamily="sans-serif-condensed"
            android:text="@string/title"
            android:textColor="#fff"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cinema_address_tv"
             />

        <TextView
            android:id="@+id/booking_seats_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="25dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/seat_s"
            android:textColor="#fff"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/booking_title_tv" />

        <TextView
            android:id="@+id/booking_date_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"

            android:layout_marginTop="25dp"
            android:fontFamily="sans-serif-condensed"
            tools:text="2020-5-12"
            android:textColor="#fff"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/booking_seats_tv" />

        <TextView
            android:id="@+id/booking_amount_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="60dp"
            android:fontFamily="sans-serif-condensed"
            tools:text="Rs. 600"
            android:textColor="#fff"
            android:textSize="27sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/booking_time_tv"
            app:layout_constraintStart_toEndOf="@+id/booking_date_tv"
            app:layout_constraintTop_toBottomOf="@+id/booking_seats_tv" />

        <TextView
            android:id="@+id/booking_time_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:fontFamily="sans-serif-condensed"
            tools:text="7 to 9 p.m."
            android:textColor="#fff"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/booking_seats_tv"
            android:layout_marginEnd="15dp" />




    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>
    <!--    #56AAB1-->